docs(readme): 更新配置文档并优化插件图标
原因：
- 简化 AI 提供商配置，统一使用 OpenAI 兼容接口。
- 更新项目元数据与资源文件。

变更：
- docs: 重构中英文 README，移除过时的 Gemini/Azure 专项配置说明，新增自定义提示词模板配置。
- build: 更新 package.json 中的版本号至 0.1.2，并更改发布者信息。
- feat: 引入自定义字体图标 `ai-commit-generator` 替换原有的 SVG 图标。
- chore: 完善 .vscodeignore 忽略规则，排除开发配置文件及日志。

变更文件：
- README.md
- README.zh_CN.md
- package.json
- .vscodeignore
- images/generator.woff

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-commit",
   "displayName": "AI Commit",
   "description": "Use OpenAI API to review Git changes, generate conventional commit messages that meet the conventions, simplify the commit process, and keep the commit conventions consistent.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "engines": {
     "node": ">=16",
     "vscode": "^1.77.0"
@@ -21,20 +21,26 @@
     "AI Commit",
     "Auto Commit"
   ],
-  "publisher": "sitoi",
-  "repository": "https://github.com/sitoi/ai-commit",
+  "publisher": "Zayrick",
+  "repository": "https://github.com/Zayrick/AI-Commit",
   "icon": "images/logo.png",
   "activationEvents": [
     "onCommand:ai-commit"
   ],
   "contributes": {
+    "icons": {
+      "ai-commit-generator": {
+        "description": "AI Commit Generator Icon",
+        "default": {
+          "fontPath": "./images/generator.woff",
+          "fontCharacter": "\\E900"
+        }
+      }
+    },
     "commands": [
       {
         "command": "extension.ai-commit",
-        "icon": {
-          "dark": "images/icon.svg",
-          "light": "images/icon.svg"
-        },
+        "icon": "$(ai-commit-generator)",
         "title": "AI Commit"
       },
       {
