--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,29 @@
 .vscode/**
 .vscode-test/**
 src/**
+.git/**
+.github/**
 .gitignore
 .yarnrc
 vsc-extension-quickstart.md
 **/tsconfig.json
 **/.eslintrc.json
+**/.prettierrc
+**/.prettierrc.*
+**/eslint.config.*
+**/webpack.config.*
 **/*.map
 **/*.ts
+out/**
+node_modules/**
+*.vsix
+aicommit.gif
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+**/*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+reference/**
