docs(readme): update repository links and demo assets
Reason:
- The repository has been moved or renamed to Zayrick/AI-Commit.
- Assets were reorganized into an images directory.

Changes:
- Updated logo and demo GIF URLs in README.md to the new repository path.
- Moved aicommit.gif to images/demo.gif and updated .vscodeignore.
- Commented out shield badges in README.md.

Modified files:
- .vscodeignore
- README.md
- aicommit.gif (deleted)
- images/demo.gif (added)

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@ vsc-extension-quickstart.md
 out/**
 node_modules/**
 *.vsix
-aicommit.gif
+images/demo.gif
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
